# ChemWise

./: .dockerignore  DEVELOPMENT_SUMMARY.md  Dockerfile  Dockerfile.jupyter  README.md  RECENT_UPDATES.md  USAGE.md  docker-compose.yml  docker.sh  pyproject.toml  requirements.txt
basis/: 6-31g.json  cc-pvdz.json  def2-svp.json
chemwise/: __init__.py  cli.py
chemwise/core/: __init__.py  basis.py  calculator.py  integrals.py  molecule.py
chemwise/methods/: __init__.py  dft.py  functionals.py  hf.py
chemwise/utils/: __init__.py  constants.py  io.py  math_utils.py
examples/: h2.xyz  methane.xyz  water.xyz  water_b3lyp.yml
tests/: test_basic.py  test_basis_sets.py  test_cc_pvdz.py  test_simple.py  test_water_basis.py
